--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,8 @@ title: Sidney Lima Filho
     {% for post in site.posts limit:10 %}
         {% if post.draft == null %}
         <li style="background:url({{ post.image }}) no-repeat center;">
-            <a href="{{ post.url }}">{{ post.title | xml_escape }}
+            <a href="{{ post.url }}">
+                <span>{{ post.title | xml_escape }}</span>
                 <small>
                     {{ post.date | date: "%B %d, %Y" }}
                 </span>
