BUG: tag small dont was closed FIX Close tag small

--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@ title: Sidney Lima Filho
                 <span>{{ post.title | xml_escape }}</span>
                 <small>
                     {{ post.date | date: "%B %d, %Y" }}
-                </span>
+                </small>
             </a>
         </li>
         {% endif %}
