--- a/index.htm
+++ b/index.htm
@@ -4,16 +4,22 @@ title: Sidney Lima Filho
 ---
 
 <ul class="posts">
-    {% for post in site.posts limit:10 %}
-        {% if post.draft == null %}
+    {% for post in site.posts limit:11 %}
+         {% unless post.draft %}
         <li style="background:url({{ post.image }}) no-repeat center;">
             <a href="{{ post.url }}">
                 <span>{{ post.title | xml_escape }}</span>
                 <small>
                     {{ post.date | date: "%B %d, %Y" }}
                 </small>
+
+                {% if post.excerpt %}
+                    <small>
+                        {{ post.excerpt }}
+                    </small>
+                {% endif %}
             </a>
         </li>
-        {% endif %}
+        {% endunless %}
     {% endfor %}
 </ul>
