update post about Rest

--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@ title: Sidney Lima Filho
                 </small>
 
                 {% if post.excerpt %}
-                    <small>
+                    <small class="excerpt">
                         {{ post.excerpt }}
                     </small>
                 {% endif %}
