--- a/leituras.htm
+++ b/leituras.htm
@@ -1,7 +1,21 @@
 --- 
-layout: default 
+layout: default
 ---
-<div id="shelfari">    
-    <script src="http://www.shelfari.com/ws/231283/widget.js?r=43456" type="text/javascript" language="javascript">
+<div id="ShelfariWidget231285" class="shelfari">
+    <a href='http://www.shelfari.com/'>Shelfari: Book reviews on your book blog</a>
+    <script src="http://www.shelfari.com/ws/231285/widget.js?r=55075" type="text/javascript" language="javascript">
     </script>
 </div>
+<noscript>
+    <ul>
+        <li>
+            <a href="http://www.shelfari.com/books/31830719/N%c3%a3o-tenha-medo-de-ser-chefe?widgetId=231285">Não tenha medo de ser chefe</a>by Bruce Tulgan
+        </li>
+        <li>
+            <a href="http://www.shelfari.com/books/31794755/Negocia%c3%a7%c3%a3o-e-administra%c3%a7%c3%a3o-de-conflitos?widgetId=231285">Negociação e administração de conflitos</a>by Antônio André...
+        </li>
+        <li>
+            <a href="http://www.shelfari.com/books/3802529/The-Back-of-the-Napkin?widgetId=231285">The Back of the Napkin</a>by Dan Roam
+        </li>
+    </ul>
+</noscript>
