--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@ layout: default
 
 <ul class="posts">
     {% for post in site.posts limit:11 %}
-         {% unless post.draft %}
+         {% if post.published %}
         <li style="background:url({{ post.image }}) no-repeat center;">
             <a href="{{ post.url }}">
                 <span>{{ post.title | xml_escape }}</span>
@@ -20,6 +20,6 @@ layout: default
                 {% endif %}
             </a>
         </li>
-        {% endunless %}
+        {% endif %}
     {% endfor %}
 </ul>
