--- a/index.htm
+++ b/index.htm
@@ -25,9 +25,10 @@ layout: default
 </ul>
 
 <h1>Videos</h1>
+<iframe width="560" height="315" frameborder="0" allowfullscreen="yes" 
+            data-bind="visible: accessControl.embed ==='allowed', attr:{src: 'http://www.youtube.com/embed/' + Videos.shift().id}" ></iframe>
 <div class="youtube" data-bind="foreach: Videos">
-    <iframe frameborder="0" allowfullscreen="yes" 
-            data-bind="visible: accessControl.embed ==='allowed', attr:{width: ($index==0?560:280), height: ($index==0?315:158), src: 'http://www.youtube.com/embed/' + id}" ></iframe>
+    <img width="260" data-bind="visible: accessControl.embed ==='allowed', attr:{src: thumbnail.hqDefault, title:title}" />
 </div>
 
 <h1>Rapidinhas</h1>
