--- a/index.htm
+++ b/index.htm
@@ -26,7 +26,7 @@ layout: default
 
 <h1>Videos</h1>
 <iframe width="560" height="315" frameborder="0" allowfullscreen="yes" 
-            data-bind="visible: Videos()[0].accessControl.embed ==='allowed', attr:{src: 'http://www.youtube.com/embed/' + Videos.shift().id}" ></iframe>
+            data-bind="visible: ViewModel.Videos()[0].accessControl.embed ==='allowed', attr:{src: 'http://www.youtube.com/embed/' + ViewModel.Videos.shift().id}" ></iframe>
 <div class="youtube" data-bind="foreach: Videos">
     <img width="260" data-bind="visible: accessControl.embed ==='allowed', attr:{src: thumbnail.hqDefault, title:title}" />
 </div>
