--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@ layout: default
     </ul>
 </div>
 
-<div class="youtube" data-bind="visible: Videos().length > 0">
+<div class="youtube">
     <h1>Videos</h1>
     <iframe width="560" height="315" frameborder="0" allowfullscreen="yes" 
                 data-bind="attr:{src: Videos().length > 0?'http://www.youtube.com/embed/' + Videos.shift().id:''}" ></iframe>
