--- a/index.htm
+++ b/index.htm
@@ -29,10 +29,10 @@ layout: default
 
 <div class="youtube" data-bind="visible: Videos().length > 0">
     <h1>Videos</h1>
-    <iframe width="560" height="315" frameborder="0" allowfullscreen="yes" 
-                data-bind="attr:{src: Videos().length > 0?'http://www.youtube.com/embed/' + Videos()[0].id:''}" ></iframe>
+    <iframe width="570" height="315" frameborder="0" allowfullscreen="yes" 
+                data-bind="visible: attr:{src: Videos().length > 0?'http://www.youtube.com/embed/' + Videos()[0].id:''}" ></iframe>
     <div class="videos" data-bind="foreach: Videos">
-        <img width="260" data-bind="attr:{src: thumbnail.hqDefault, title:title, click:$parent.ShowVideo}" />
+        <img width="187" data-bind="visible: $index>0, attr:{src: thumbnail.hqDefault, title:title, click:$parent.ShowVideo}" />
     </div>
 </div>
 
