Life list atualizada com mais cidades e metas

--- a/life-list.html
+++ b/life-list.html
@@ -20,44 +20,62 @@ A lista é uma auto-analise que recomendo que todos façam um dia. Pare sua vida
 
 Abaixo está aquilo que me dá frio na barriga só de pensar que estarei fazendo um dia.
 
-+   Pular de Bumgee Jump
-
-+   Saltar de Asa Delta
-
-+   -<s>Saltar de Parapente</s>
-
-+   -<s>Casar</s>
-
-+   Trocar de carro a cada 2 anos
-
-+   Conhecer 1 pais de cada região do mundo (<s>EUA</s>, <s>Um País na Africa: Guiné Bissau</s>, <s>Portugal</s>, Japão, China, Austrália, Nova Zelândia, Filipinas, Micronésia, Bahamas, Chile, Inglaterra, Rússia, Dinamarca, Noruega, Suécia)
-
-+   Ter mais contato com meus 10 melhores amigos
-
-+   Falar fluentemente 3 idiomas (Inglês, Espanhol, a alguma asiática a definir)
-
-+   Doar Sangue 2x por ano
-
-+   Doar Medula 1x na vida
-
-+   Me vestir bem
-
-+   Poder aposentar entre 40-45 anos (acho que mesmo podendo eu não iria, mas quero ter segurança de poder parar)
-
-+   Praticar as 7 virtudes espirituais (**Castidade** x Luxúria, **Generosidade** x Avareza, **Auto-controle** x Gula, **Presteza** x Preguiça, **Paciência** x Ira, **Caridade** x Inveja, **Humildade** x Soberba)
-
-+   Colocar meu conhecimento a disposição dos mais jovens
-
-+   Aprender a surfar
-
-+   -<s>Fazer Yoga</s>
-
-+   Voltar a pesar 85Kg :(
-
-+   Praticar Mergulho 2x por ano
-
-+   Ter mais fotos subaquáticas
-
-+   Tirar mais fotos
++ Pular de Bumgee Jump
++ Saltar de Asa Delta
++ <del>Saltar de Parapente</del> &#x2713;
++ <del>Casar</del> &#x2713;
++ Ter 2 filhos
++ Trocar de carro a cada 2 anos
++ Conhecer 1 pais de cada região do mundo
+    + Explorar mais o Brasil
+        + Gramado
+        + Barretos
+        + Campos do Jordão
+        + Foz do Iguaçu
+        + Fernando de Noronha
+        + Abrolhos
+        + Bonito
+    + América do Sul
+        + Paraguai
+        + Chile
+        + Peru - Machu Pichu
+    + América Central
+        + Bermudas
+        + Cancún
+    + <del>EUA</del> &#x2713;
+        + New York
+        + Havaí
+        + <del>Las Vegas</del> &#x2713;
+    + <del>Europa</del>
+        + Paris
+        + Ilhas Gregas
+        + Jerusalém
+        + <del>Portugal</del> &#x2713;
+        + Dinamarca ou Noruega ou Suécia
+    + <del>Africa</del> &#x2713;
+        + <del>Guiné-Bissau</del> &#x2713;
+        + Egito
+    + Asia
+        + Muralha da China
+        + Japão
+    + Oceania
+        + Austrália
+        + Nova Zelândia
+        + Bora Bora
++ Ter mais contato com meus 10 melhores amigos
++ Conhecer lugares interessantes
++ Falar fluentemente 3 idiomas (Inglês, Espanhol, a alguma asiática a definir)
++ Doar Sangue 2x por ano
++ Doar Medula 1x na vida
++ Me vestir bem
++ Poder aposentar entre 40-45 anos (acho que mesmo podendo eu não iria, mas quero ter segurança de poder parar)
++ Praticar as 7 virtudes espirituais (**Castidade** x Luxúria, **Generosidade** x Avareza, **Auto-controle** x Gula, **Presteza** x Preguiça, **Paciência** x Ira, **Caridade** x Inveja, **Humildade** x Soberba)
++ Colocar meu conhecimento a disposição dos mais jovens
++ Aprender a surfar
++ <del>Fazer Yoga</del>
++ Voltar a pesar 85Kg :(
++ Praticar Mergulho 2x por ano
++ Ter mais fotos subaquáticas
++ Tirar mais fotos
 
 Essa lista irá crescer portanto não acredite que apenas isso me satisfará. ;)
