Life list atualizada com mais cidades e metas

--- a/life-list.html
+++ b/life-list.html
@@ -72,7 +72,7 @@ Abaixo está aquilo que me dá frio na barriga só de pensar que estarei fazendo
 + Praticar as 7 virtudes espirituais (**Castidade** x Luxúria, **Generosidade** x Avareza, **Auto-controle** x Gula, **Presteza** x Preguiça, **Paciência** x Ira, **Caridade** x Inveja, **Humildade** x Soberba)
 + Colocar meu conhecimento a disposição dos mais jovens
 + Aprender a surfar
-+ <del>Fazer Yoga</del>
++ <del>Fazer Yoga</del> &#x2713;
 + Voltar a pesar 85Kg :(
 + Praticar Mergulho 2x por ano
 + Ter mais fotos subaquáticas
